[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/grasland.gd" type="Script" id=1]
[ext_resource path="res://models/items/grasland.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://sound/sfx/cut_gras_01.ogg" type="AudioStream" id=3]
[ext_resource path="res://sound/sfx/Auto #4.ogg" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.766525, 1 )

[sub_resource type="BoxShape" id=2]

[node name="grasland" type="StaticBody" groups=[
"grasland",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.467, 0, 12.416 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 0.15782, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="LabelAnchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.300306, 0 )

[node name="Label" type="Label" parent="."]
margin_left = -100.0
margin_top = 137.0
margin_right = -54.0
margin_bottom = 158.0
text = "grasland"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42407, 0 )

[node name="sfxHarvest" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.34907, 0 )
stream = ExtResource( 3 )

[node name="sfxReap" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.34907, 0 )
stream = ExtResource( 4 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
